commit navbar and data

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   </head>
   <body>
     <div class="container">
-      <div id="headerHolder" class="row header"></div>
-      <div class="row">Content thay đổi làm ở đây</div>
-      <div id="footerHolder" class="row footer"></div>
+      <div id="headerHolder" class="row"></div>
+      <div id="footerHolder" class="container-sm centered-content"></div>
+      <link type="import" href="./views/navigationbar/navigationbar.html" />
     </div>
+    <script
+      buffer
+      type="text/javascript"
+      src="./functions/hamburger.js"
+    ></script>
     <script type="text/javascript">
       const navbarURL = "navigationbar/navigationbar.html";
       const footerURL = "footer/footer.html";
