--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div id="headerHolder" class="row header"></div>
-      <div class="row">Content thay đổi làm ở đây</div>
+      <div id="contentHolder" class="row"></div>
       <div id="footerHolder" class="row footer"></div>
     </div>
     <script
@@ -20,8 +20,11 @@
     <script type="text/javascript">
       const navbarURL = "navigationbar/navigationbar.html";
       const footerURL = "footer/footer.html";
+      const cartURL = "cart/cart.html";
       const headerHolder = document.getElementById("headerHolder");
       const footerHolder = document.getElementById("footerHolder");
+      const contentHolder = document.getElementById("contentHolder");
+      showTemplate(contentHolder, cartURL);
       showTemplate(headerHolder, navbarURL);
       showTemplate(footerHolder, footerURL);
     </script>
