--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="container">
       <div id="headerHolder" class="row header"></div>
-      <div class="row">Content thay đổi làm ở đây</div>
+      <div class="row">Content thay đổi làm ở đây
+      </div>
       <div id="footerHolder" class="row footer"></div>
     </div>
     <script
