--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     ></script>
     <script type="text/javascript">
       const navbarURL = "navigationbar/navigationbar.html";
-      const footerURL = "footer/footer.html";
+      const footerURL = "login_register/register.html";
       const headerHolder = document.getElementById("headerHolder");
       const footerHolder = document.getElementById("footerHolder");
       showTemplate(headerHolder, navbarURL);
