--- a/index.html
+++ b/index.html
@@ -6,16 +6,108 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
     <script type="text/javascript" src="./functions/index.js"></script>
     <script type="text/javascript" src="./functions/database.js"></script>
-    <script src="./functions/navigationbar.js"></script>
+    <script type="text/javascript" src="./functions/navigationbar.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div ng-app="navBar" id="headerHolder" class="row header">
+    <div ng-app="myApp" class="container">
+      <div id="headerHolder" class="row header">
         <nav-bar></nav-bar>
       </div>
+
+      <div id="contentHolder" class="row">
+        <div>Carousel</div>
+        <div align="center">
+          <h2>Shop by categories</h2>
+          <p>Top categories in this week</p>
+        </div>
+        <div class="product-category">
+          <table>
+            <tbody id="tbody"></tbody>
+            <tr>
+              <td rowspan="2" colspan="2">
+                <div class="image-container centered-content">
+                  <img
+                    src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/col1_900x.jpg?v=1589383598"
+                    alt="img"
+                  />
+                  <div class="overlay">
+                    <div class="cateNav centered-content">
+                      <a style="padding: 100%" href="#">Women</a>
+                    </div>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="image-container">
+                  <img
+                    src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/col4_540x.jpg?v=1589383683"
+                    alt="img"
+                  />
+                  <div class="overlay">
+                    <div class="cateNav centered-content">
+                      <a style="padding: 100%" href="#">Shoes</a>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td rowspan="2">
+                <div class="image-container">
+                  <img
+                    src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/col5_540x.jpg?v=1589383702"
+                    alt="img"
+                  />
+                  <div class="overlay">
+                    <div class="cateNav centered-content">
+                      <a style="padding: 100%" href="#">Mens</a>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="image-container">
+                  <img
+                    src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/col2_540x.jpg?v=1589383623"
+                    alt="img"
+                  />
+                  <div class="overlay">
+                    <div class="cateNav centered-content">
+                      <a style="padding: 100%" href="#">Accesories</a>
+                    </div>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="image-container">
+                  <img
+                    src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/col3_540x.jpg?v=1589383663"
+                    alt="img"
+                  />
+                  <div class="overlay">
+                    <div class="cateNav centered-content">
+                      <a style="padding: 100%" href="#">Backpacks</a>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div align="center">
+          <h2>Trending Products</h2>
+          <p>Top view in this week</p>
+        </div>
+      </div>
+      <div id="productHolder" class="container row"></div>
+      <div class="row">
+        <footer-web></footer-web>
+      </div>
     </div>
+    <script type="text/javascript" src="./functions/productDisplay.js"></script>
   </body>
 </html>
