--- a/public/Information.html
+++ b/public/Information.html
@@ -13,7 +13,9 @@
           <p><img class="logo" src="./images/logo1.png" alt="logo" /></p>
           <div class="flex-box">
             <p>Contact Information</p>
-            <span>Already have an account? <a href="/">Login</a></span>
+            <span
+              >Already have an account? <a href="./login.html">Login</a></span
+            >
           </div>
           <input
             class="block-input"
