--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,14 @@
       </div>
 
       <div id="contentHolder" class="row">
-        <div>Carousel</div>
+        <div class="row">
+          <carou-sel></carou-sel>
+        </div>
         <div align="center" class="page-margin">
           <h1>Shop by categories</h1>
           <p>Top categories in this week</p>
         </div>
-        <div class="product-category">
+        <div class="centered-content product-category">
           <table>
             <tbody id="tbody"></tbody>
             <tr>
