--- a/public/navigationbar.html
+++ b/public/navigationbar.html
@@ -16,17 +16,17 @@
       </a>
       <div class="dropdown shop-dd">
         <div>
-          <h3><a href="#"> Catalog</a></h3>
+          <h3><a href="./shop.html"> Catalog</a></h3>
           <div>
-            <a href="#">Womens</a><br />
-            <a href="#">Mens</a><br />
-            <a href="#">Shoes</a><br />
-            <a href="#">Packpacks</a><br />
-            <a href="#">Accesories</a>
+            <a href="./shop.html">Womens</a><br />
+            <a href="./shop.html">Mens</a><br />
+            <a href="./shop.html">Shoes</a><br />
+            <a href="./shop.html">Packpacks</a><br />
+            <a href="./shop.html">Accesories</a>
           </div>
         </div>
         <div>
-          <h3><a href="#">New products</a></h3>
+          <h3><a href="./shop.html">New products</a></h3>
           <div
             style="
               display: flex;
@@ -69,13 +69,13 @@
       </div>
     </li>
     <li>
-      <a href="#"
+      <a href="./shop.html"
         >Collection
         <img src="./images/downarrow.svg" alt="down arr" />
       </a>
       <div align="center" class="dropdown collection-dd">
         <div>
-          <a href="#">
+          <a href="./shop.html">
             <img
               src="https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/women_180x.jpg?v=1589429115"
               alt="img 0"
@@ -84,7 +84,7 @@
           </a>
         </div>
         <div>
-          <a href="#">
+          <a href="./shop.html">
             <img
               src="https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/men_180x.jpg?v=1589429045"
               alt="img 1"
@@ -93,7 +93,7 @@
           </a>
         </div>
         <div>
-          <a href="#">
+          <a href="./">
             <img
               src="https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/shoes_180x.jpg?v=1589429091"
               alt="img 2"
@@ -103,7 +103,7 @@
         </div>
 
         <div>
-          <a href="#">
+          <a href="./shop.html">
             <img
               src="https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/bag_180x.jpg?v=1589429021"
               alt="img 3"
@@ -112,7 +112,7 @@
           </a>
         </div>
         <div>
-          <a href="#">
+          <a href="./shop.html">
             <img
               src="https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/accessories_180x.jpg?v=1589428985"
               alt="img 4"
