--- a/public/carousel.html
+++ b/public/carousel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>MIU</title>
-    <link rel="stylesheet" href="./style/carousel.css" />
+    <link rel="stylesheet" href="./styles/carousel.css" />
   </head>
   <body>
     <!--image slider start-->
