--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
       <div id="headerHolder" class="row header">
         <nav-bar></nav-bar>
       </div>
-
       <div id="contentHolder" class="row">
         <div class="row">
           <carou-sel></carou-sel>
@@ -155,7 +154,7 @@
       </div>
       <div
         class="row container"
-        style="padding: 4% 0%; background-color: #f8f8f8"
+        style="padding: 4% 0%; margin-top: 12%; background-color: #f8f8f8"
       >
         <div
           class="container-rd"
