--- a/public/navigationbar.html
+++ b/public/navigationbar.html
@@ -69,7 +69,7 @@
       </div>
     </li>
     <li>
-      <a href="./shop.html"
+      <a href="./collection_site.html"
         >Collection
         <img src="./images/downarrow.svg" alt="down arr" />
       </a>
