--- a/public/navigationbar.html
+++ b/public/navigationbar.html
@@ -123,7 +123,7 @@
       </div>
     </li>
     <li><a href="#">Blogs</a></li>
-    <li><a href="#">Contact Us</a></li>
+    <li><a href="./contact.html">Contact Us</a></li>
   </ul>
   <div class="signin">
     <img src="./images/user.png" alt="user icon" />
