--- a/public/register.html
+++ b/public/register.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div ng-app="myApp" class="container">
-      <div id="headerHolder" class="row header"></div>
+      <div class="row header">
+        <nav-bar></nav-bar>
+      </div>
       <div class="container-th"></div>
       <div class="container-nd">
         <div class="login-form">
@@ -58,6 +60,9 @@
             <input class="container-nd" type="button" value="Create Account" />
           </form>
         </div>
+      </div>
+      <div class="row">
+        <footer-web></footer-web>
       </div>
     </div>
   </body>
