--- a/public/navigationbar.html
+++ b/public/navigationbar.html
@@ -127,8 +127,8 @@
   </ul>
   <div class="signin">
     <img src="./images/user.png" alt="user icon" />
-    <a href="./user.html">Login</a><span>/</span>
-    <a href="./user.html">Sign up</a>
+    <a href="./login.html">Login</a><span>/</span>
+    <a href="./register.html">Sign up</a>
     <span>|</span>
     <img src="./images/search.svg" alt="search icon" />
     <a href="./cart.html">
