--- a/public/carousel.html
+++ b/public/carousel.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Javascript Image Slider</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../../style/style_carousel.css"
-    />
-    <!-- <script src="https://kit.fontawesome.com/a81368914c.js"></script> -->
+    <title>MIU Shop</title>
+    <link rel="stylesheet" type="text/css" href="./styles/carousel.css" />
   </head>
   <body>
     <div class="slideshow-container">
@@ -44,6 +39,6 @@
         <span class="dot" onclick="currentSlide(3)"></span>
       </div>
     </div>
-    <script src="../../functions/carousel.js"></script>
+    <script src="./functions/carousel.js"></script>
   </body>
 </html>
