--- a/public/carousel.html
+++ b/public/carousel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MIU Shop</title>
+    <title>Javascript Image Slider</title>
     <link rel="stylesheet" type="text/css" href="./styles/carousel.css" />
   </head>
   <body>
