--- a/public/carousel.html
+++ b/public/carousel.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="slideshow-container">
-      <div class="mySlides fade centered-content">
+      <div class="mySlides carousel fade centered-content">
         <div class="numbertext">1 / 3</div>
         <img
           src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/slide11.jpg?v=1589382894"
