--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./functions/index.js"></script>
     <script type="text/javascript" src="./functions/database.js"></script>
     <script type="text/javascript" src="./functions/navigationbar.js"></script>
+    <script src="./functions/carousel.js"></script>
   </head>
   <body>
     <div ng-app="myApp" class="container">
@@ -17,9 +18,6 @@
         <nav-bar></nav-bar>
       </div>
       <div id="contentHolder" class="row">
-        <div class="row">
-          <carou-sel></carou-sel>
-        </div>
         <div align="center" class="page-margin">
           <h1>Shop by categories</h1>
           <p>Top categories in this week</p>
