--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,16 @@
           <p>Top categories in this week</p>
         </div>
         <div class="centered-content product-category">
+          <div class="info">
+            <h4 class="item">Quick parcel delivery, <span>from $25</span></h4>
+            <h1 class="item">
+              Cover Up! Spring is comming<br />
+              Extra 40% Now
+            </h1>
+            <button class="item">
+              BUY NOW <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
           <table>
             <tbody id="tbody"></tbody>
             <tr>
