--- a/public/collection_site.html
+++ b/public/collection_site.html
@@ -17,52 +17,9 @@
     <script src="./functions/navigationbar.js"></script>
     <script src="./functions/footer.js"></script>
     <title>Collections</title>
-    <script>
-      var app = angular.module("AngularApp", []);
-      app.controller("CollectionController", function ($scope) {
-        $scope.collections = [
-          {
-            name: "Accesories",
-            image:
-              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/accessories_540x.jpg?v=1589428985",
-            quantity: 17,
-          },
-          {
-            name: "BackPacks",
-            image:
-              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/bag_540x.jpg?v=1589429021",
-            quantity: 17,
-          },
-          {
-            name: "HomePage",
-            image:
-              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/accessories_5e68ae61-8db3-4f19-a812-887b89310179_540x.jpg?v=1589814373",
-            quantity: 17,
-          },
-          {
-            name: "Shoes",
-            image:
-              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/shoes_540x.jpg?v=1589429091",
-            quantity: 17,
-          },
-          {
-            name: "Women",
-            image:
-              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/women_540x.jpg?v=1589429115",
-            quantity: 17,
-          },
-          {
-            name: "Men",
-            image:
-              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/men_540x.jpg?v=1589429045",
-            quantity: 17,
-          },
-        ];
-      });
-    </script>
   </head>
   <body ng-app="myApp" ng-controller="CollectionController">
-    <div>
+    <div id="header">
       <nav-bar></nav-bar>
     </div>
     <div class="collection">
@@ -85,7 +42,7 @@
         </div>
       </div>
     </div>
-    <div>
+    <div class="row" style="margin-top: 95vh">
       <footer-web></footer-web>
     </div>
   </body>
