--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div ng-app="myApp" class="container">
-      <div class="row">
+      <div class="row" style="margin-bottom: 10vh">
         <nav-bar></nav-bar>
       </div>
       <div class="container-th"></div>
@@ -40,7 +40,7 @@
           </form>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="margin-top: 20vh">
         <footer-web></footer-web>
       </div>
     </div>
