--- a/public/register.html
+++ b/public/register.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div ng-app="myApp" class="container">
-      <div class="row header">
+      <div class="row header" style="margin-bottom: 10vh">
         <nav-bar></nav-bar>
       </div>
       <div class="container-th"></div>
@@ -61,7 +61,7 @@
           </form>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="margin-top: 20vh">
         <footer-web></footer-web>
       </div>
     </div>
