--- a/public/shop.html
+++ b/public/shop.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div ng-app="myApp" class="container">
-      <div class="row">
+      <div id="header" class="row">
         <nav-bar></nav-bar>
       </div>
       <div class="row">
