--- a/public/contact.html
+++ b/public/contact.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="./functions/navigationbar.js"></script>
   </head>
   <body ng-app="myApp">
-    <div>
+    <div id="header">
       <nav-bar></nav-bar>
     </div>
     <div class="row">
