--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <div ng-app="myApp" class="container">
-      <div id="headerHolder" class="row header">
+      <div id="header" class="row header">
         <nav-bar></nav-bar>
       </div>
-      <div class="carousel row">
+      <div class="carousel row" style="z-index: -1">
         <div class="slideshow-container">
           <div class="mySlides fade centered-content">
             <div class="numbertext">1 / 3</div>
@@ -71,7 +71,7 @@
                   />
                   <div class="overlay">
                     <div class="cateNav centered-content">
-                      <a style="padding: 100%" href="#">Women</a>
+                      <a style="padding: 100%" href="./shop.html">Women</a>
                     </div>
                   </div>
                 </div>
@@ -84,7 +84,7 @@
                   />
                   <div class="overlay">
                     <div class="cateNav centered-content">
-                      <a style="padding: 100%" href="#">Shoes</a>
+                      <a style="padding: 100%" href="./shop.html">Shoes</a>
                     </div>
                   </div>
                 </div>
@@ -99,7 +99,7 @@
                   />
                   <div class="overlay">
                     <div class="cateNav centered-content">
-                      <a style="padding: 100%" href="#">Mens</a>
+                      <a style="padding: 100%" href="./shop.html">Mens</a>
                     </div>
                   </div>
                 </div>
@@ -114,7 +114,7 @@
                   />
                   <div class="overlay">
                     <div class="cateNav centered-content">
-                      <a style="padding: 100%" href="#">Accesories</a>
+                      <a style="padding: 100%" href="./shop.html">Accesories</a>
                     </div>
                   </div>
                 </div>
@@ -127,7 +127,7 @@
                   />
                   <div class="overlay">
                     <div class="cateNav centered-content">
-                      <a style="padding: 100%" href="#">Backpacks</a>
+                      <a style="padding: 100%" href="./shop.html">Backpacks</a>
                     </div>
                   </div>
                 </div>
