--- a/public/navigationbar.html
+++ b/public/navigationbar.html
@@ -61,10 +61,12 @@
           </div>
         </div>
         <div class="promotion">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/banner-menu_540x.jpg?v=1589797831"
-            alt="promotion"
-          />
+          <a href="./collection_site.html">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/banner-menu_540x.jpg?v=1589797831"
+              alt="promotion"
+            />
+          </a>
         </div>
       </div>
     </li>
@@ -93,7 +95,7 @@
           </a>
         </div>
         <div>
-          <a href="./">
+          <a href="./shop.html">
             <img
               src="https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/shoes_180x.jpg?v=1589429091"
               alt="img 2"
